--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,64 +1,140 @@
+/*universal*/
+* {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
+
 body {
-    background-color: #d9d5ca;
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    align-items: center;
-    flex-direction: column;
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-    font-family: Helvetica, Arial, sans-serif;
+    background-color: #d9dcd6;
 }
 
-.links {
-    font-style: italic;
-    padding: -30%;
+/*start of header CSS*/
+.header {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    background-color: #2a607c;
+    color: #ffffff;
+    padding: 10px;
 }
 
-.links p {
-    margin-top: 0%;
+.header h1 {
+    display: inline-block;
+    font-size: 48px;
+    background-color: #024908;
+    padding-top: 15px;
+    position: static;
 }
 
-header {
-    text-align: center;
+.header nav {
+    padding-top: 15px;
+    margin-right:20px;
+    float: right;
+    font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', 'sans-serif';
+    font-size: 20px;
 }
+
+.header nav ul {
+    list-style-type: none;
+}
+
+.header nav li {
+    display: inline-block;
+    margin-left: 25px;
+}
+
+.header div {
+    padding-top: 15px;
+    margin-right: 20px;
+    float: right;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 20px;
+}
+
+.header div ul {
+    list-style-type: none;
+}
+
+.header div ul li {
+    display: inline-block;
+    margin-left: 25px;
+}
+/*end of header CSS*/
+
+/*start of banner CSS*/
+.banner {
+    padding: 50px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    background-color: #027805;
+    color: #ffffff;
+}
+
+.banner h3 {
+    display: inline-block;
+}
+
+
+.banner ul {
+    list-style-type: none;
+    display: inline-block;
+    float: right;
+    margin-right: 0px;
+    padding: 0px;
+}
+
+.banner li {
+    background-color: #07777d;
+    padding: 10px;
+    display: inline-block;
+}
+/*end of banner CSS*/
+
+a {
+    color: #ffffff;
+    text-decoration: none;
+}
+
+p {
+    font-size: 16px;
+}
+
+.content {
+    width: 100%;
+    display: inline-block;
+}
+
 .myimg {
     width: 200px;
     height: auto;
-    position: center;
-    margin-top: 10px;
+    float: left;
+    margin-right: 25px;
+    margin-left: 25px;
 }
 
-#firstimg {
-    width: 400px;
-    height: auto;
-    margin-top: 0%;
+#About-Me {
+    background-color: #400000;
+    width: auto;
+    height: 400px;
+    color: #ffffff;
+    padding-top: 25px;
 }
 
-header nav ul {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-    list-style: none;
-    font-size: 20px;
-  }
-  
-  header nav ul li a {
-    padding: 10px 15px;
-    font-weight: lighter;
-    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-  }
-  
-  header nav ul li a:hover {
-    font-weight: bold;
-    color: #024e76;
-    border-radius: 15px;
-    text-shadow: none;
-  }
+#About-Me h2 {
+    margin-left: 25px;
+    margin-right: 25px;
+}
 
-footer {
-    font-size: 15px;
+#About-Me p {
+    display: block;
+    margin-block-start: 0em;
+    margin-block-end: 0em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+}
+
+.vertical {
+    border-left: 6px solid black;
+    height: 320px;
+    position: absolute;
+    margin-left: 240px;
 }
 /*Resized/MediaQueries: Responsive layout adapts to viewport--> */
