--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,184 +7,175 @@
 
 body {
     background-color: #d9dcd6;
+    color: #ffffff;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 /*start of header CSS*/
 .header {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
-    color: #ffffff;
     padding: 10px;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
 }
 
 .header h1 {
-    display: inline-block;
     font-size: 48px;
     background-color: #024908;
-    padding-top: 15px;
-    position: static;
+    margin: 0;
 }
 
 .header nav {
-    padding-top: 15px;
-    margin-right:20px;
-    float: right;
-    font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', 'sans-serif';
+    margin: 20px;
     font-size: 20px;
 }
 
 .header nav ul {
-    list-style-type: none;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    list-style: none;
 }
 
-.header nav li {
-    display: inline-block;
-    margin-left: 25px;
-}
-
-.header div {
-    padding-top: 15px;
-    margin-right: 20px;
-    float: right;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 20px;
-}
-
-.header div ul {
-    list-style-type: none;
-}
-
-.header div ul li {
-    display: inline-block;
-    margin-left: 25px;
+.header nav ul li a {
+    padding: 10px;
+    margin: 10px, 15px;
+    font-size: 24px;
 }
 /*end of header CSS*/
 
 /*start of banner CSS*/
 .banner {
-    padding: 50px;
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    justify-content: flex-end;
+    flex-wrap: wrap;
+    height: 100px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #027805;
     color: #ffffff;
 }
 
 .banner h3 {
-    display: inline-block;
-}
-
-
-.banner ul {
-    list-style-type: none;
-    display: inline-block;
-    float: right;
-    margin-right: 0px;
-    padding: 0px;
+    display: flex;
+    justify-content: flex-end;
 }
 
 .banner li {
     background-color: #07777d;
-    padding: 10px;
+    margin-top: 17%;
+    padding: 5px;
     display: inline-block;
 }
 /*end of banner CSS*/
 
-a {
-    color: #ffffff;
-    text-decoration: none;
-}
-
-p {
-    font-size: 16px;
-}
-
-.content {
-    width: 100%;
-    display: inline-block;
-}
-
 .myimg {
-    width: 200px;
+    width: 150px;
     height: auto;
-    float: left;
-    margin-right: 25px;
-    margin-left: 25px;
 }
 
 #About-Me {
     background-color: #400000;
-    width: auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: stretch;
     height: 400px;
-    color: #ffffff;
-    padding-top: 25px;
-    font-size: 30px;
+    padding-top: 10px;
+    font-size: 20px;
+}
+
+#About-Me div {
+    flex: 0 0 25%;
+    border-right: 6px solid black;
+    padding-left: 60px;
+    padding-right: 60px;
 }
 
 #About-Me h2 {
-    margin-left: 25px;
-    margin-right: 25px;
+    text-align: left;
 }
 
 #About-Me p {
-    display: block;
-    margin-block-start: 0em;
-    margin-block-end: 0em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-}
-
-.vertical {
-    border-left: 6px solid black;
-    height: 320px;
-    position: absolute;
-    margin-left: 240px;
-}
-
-#My-Work {
-    background-color: #9c5009;
-    width: auto;
-    height: auto;
-    color: #ffffff;
-    padding-top: 25px;
-    font-size: 30px;
-    padding-bottom: 200px;
-}
-
-#My-Work h2 {
-    margin-left: 25px;
-    margin-right: 25px;
-}
-
-#My-Work p {
+    font-size: 20px;
+    line-height: 1.6;
     display: inline-block;
+    flex: 0 0 70%;
+    padding-left: 10px;
 }
 
-#My-Work img {
-    height: auto;
-    float: left;
-    margin-right: 25px;
-    margin-left: 300px;
-    display: inline-block;
+.box {
+    display: flex;
+    justify-content: space-between;
+    align-items: stretch;
+    height: 400px;
+    padding-top: 10px;
+    font-size: 20px;
+}
+
+.box h2 {
+    flex: 0 0 25%;
+    border-right: 6px solid black;
+    padding-left: 60px;
+    padding-right: 60px;
+}
+
+.box div {
+    flex: 0 0 70%;
+}
+
+.items div {
+    min-height: 150px;
+    max-height: 150px;
+    border: 4px solid black;
+    margin: 5px;
+}
+
+.items h3 {
+    position: relative;
+    top: 16vh;
+    text-align: right;
+}
+
+.project-1 {
+    background-image: url("../images/runbuddyimg.PNG");
+    background-size: cover;
+}
+
+.project-2 {
+    background-image: url("../images/Horiseonprojectimg.PNG");
+    background-size: cover;
+}
+
+.project-3 {
+    background-image: url("../images/fanpageimg.PNG");
+    background-size: cover;
+}
+
+.project-4 {
+    background-image: url("../images/arachneimg.PNG");
+    background-size: cover;
 }
 
 #Contact-Me {
+    padding-left: 25px;
     background-color: #d8db0a;
     width: auto;
     height: auto;
     color: #ffffff;
     padding-top: 25px;
-    font-size: 30px;
 }
 
 #Contact-Me h2 {
-    margin-left: 25px;
-    margin-right: 25px;
+    display: flex;
+    justify-content: flex-start;
+    font-size: 30px;
 }
 
 #Contact-Me p {
     display: block;
-    margin-block-start: 0em;
-    margin-block-end: 0em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
+    font-size: 15px;
 }
 /*Resized/MediaQueries: Responsive layout adapts to viewport--> */
