--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@ body {
     color: #2b154d;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
-
+/*start of link CSS*/
 a:link {
     color: #2b154d;
 }
@@ -22,6 +22,7 @@ a:visited {
 a:hover {
     color: #8c76b0;
 }
+/*end of link CSS*/
 
 /*start of header CSS*/
 .header {
@@ -83,6 +84,7 @@ a:hover {
 }
 /*end of banner CSS*/
 
+/*start of about-me CSS*/
 .myimg {
     width: 150px;
     height: auto;
@@ -116,7 +118,9 @@ a:hover {
     flex: 0 0 70%;
     padding-left: 10px;
 }
+/*end of about-me CSS*/
 
+/*start of my-work CSS*/
 .box {
     display: flex;
     justify-content: space-between;
@@ -173,7 +177,9 @@ a:hover {
     background-image: url("../images/arachneimg.PNG");
     background-size: cover;
 }
+/*end of my-work CSS*/
 
+/*start of contact-me CSS*/
 #Contact-Me {
     display: flex;
     justify-content: space-between;
@@ -201,6 +207,8 @@ a:hover {
 #Contact-Me p {
     font-size: 10px;
 }
+/*end of contact-me CSS*/
+
 /*Resized/MediaQueries: Responsive layout adapts to viewport--> */
 /* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
 @media screen and (max-width: 980px) {
